name:                pandoc-hateblo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sky-y/pandoc-hateblo#readme
license:             BSD3
license-file:        LICENSE
author:              Yuki Fujiwara
maintainer:          sky.y.0079@gmail.com
copyright:           2016 (c) Yuki Fujiwara
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       pandoc-types >= 1.17 && < 1.18,
                       pandoc >= 1.19.2 && < 2.1
  default-language:    Haskell2010

executable hateblo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc-hateblo
  default-language:    Haskell2010

test-suite pandoc-hateblo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pandoc-hateblo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sky-y/pandoc-hateblo
