[project]
name = "pandoc-latex-to-hateblo-custom"
version = "2.0.0"
description = "LaTeXからはてな記法への変換用Pandocフィルタ"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "panflute>=2.3.1",
    "pangu>=4.0.6.1",
    "requests>=2.32.5",
    "ruff>=0.14.7",
    "types-requests>=2.32.4.20250913",
]
